--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.15.1"
 minimal_mistakes_skin: default
 
 title: Tabletop Simulator Community
@@ -98,6 +98,11 @@ whitelist:
   - jemoji
   - jekyll-include-cache
 
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path/
+
 category_archive:
   type: liquid
   path: /categories/
@@ -122,3 +127,24 @@ defaults:
       comments: false
       share: true
       related: true
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      layout: single
+      read_time: false
+      author_profile: false
+      share: false
+      comments: false
+      sidebar:
+        nav: "docs"
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: false
+      sidebar:
+        nav: "docs"
