Added External Guides and updated libraries & utilities.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
 docs:
   - title: Guides
     children:
-      - title: "Coming Soon"
-        url: #
+      - title: "External Guides"
+        url: /docs/external-guides/
 
   - title: Links
     children:
