--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 main:
   - title: "Guides"
     url: /docs/intro/
-  - title: "Links"
+  - title: "Libraries"
     url: /docs/libraries/
-  - title: "Posts"
-    url: /year-archive/
+  - title: "Utilities"
+    url: /docs/utilities/
 
 docs:
   - title: Guides
@@ -18,3 +18,6 @@ docs:
         url: /docs/libraries/
       - title: "Utilities"
         url: /docs/utilities/
+
+  - title: Bugs & Known Issues
+    url: /docs/known-issues/
